--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,6 @@
     <a class="link" href="{{ site.url }}/feed.xml" target="_blank">
         {% fa_svg fas.fa-rss %}
     </a>
+    <p><a class="link" href="{{ site.url }}/imprint">Imprint</a></p>
 
-    <p class="extra">
-        <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo theme</a> by <a class="link" href="https://github.com/sergiokopplin/indigo">Kopplin</a>
-    </p>
 </footer>
