--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -3,7 +3,7 @@ $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
 $alpha: #666
 $beta: #222
-$gama: #aaa
+$gama: #777
 $delta: #4b0082
 $epsilon: #ededed
 
@@ -11,3 +11,13 @@ $mobile: "only screen and (max-width: 400px)"
 $tablet: "only screen and (min-width: 400px) and (max-width: 1050px)"
 $above: "only screen and (min-width: 780px)"
 $below: "only screen and (max-width: 780px)"
+$primary:   #007bff
+$secondary: #6c757d
+$success:   #28a745
+$info:      #17a2b8
+$warning:   #ffc107
+$danger:    #dc3545
+$light:     #f8f9fa
+$dark:      #343a40
+
+$rounded-borders: 15px
