--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -28,7 +28,9 @@ h4
 
 a
 	color: $delta
-	text-decoration: underline
+	text-decoration: none
+a:hover
+	border-bottom: 2px solid #999
 
 p
 	line-height: 1.7
