--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -11,7 +11,7 @@ $mobile: "only screen and (max-width: 400px)"
 $tablet: "only screen and (min-width: 400px) and (max-width: 1050px)"
 $above: "only screen and (min-width: 780px)"
 $below: "only screen and (max-width: 780px)"
-$primary:   #007bff
+$primary:   #4b0082
 $secondary: #6c757d
 $success:   #28a745
 $info:      #17a2b8
