--- a/_sass/base/timeline.scss
+++ b/_sass/base/timeline.scss
@@ -1,6 +1,6 @@
 .timeline-body {
 	position: relative;
-	background-color: $light;
+	background-color: #fff;
 	border-radius: 0 $rounded-borders $rounded-borders 0;
     padding: 5px 0;
 	font-size: 13px;
