changed talk description

--- a/_includes/about/talks.html
+++ b/_includes/about/talks.html
@@ -1,6 +1,6 @@
 
 <div class="archive">
-  Sometimes I give talks and presentations about privacy and AI, federated machine learning or applied machine learning in general. Here's an excerpt:
+  Sometimes I give talks, presentations and trainings about privacy and AI, federated machine learning or applied machine learning in general. Here's an excerpt:
   <br><br><br>
 
 <div class="col mt-4">
